# jikoni

./: .env.example  .gitignore  Cargo.toml  README.md
docs/: event_storming.md  persona.md  product_vision_board.md
jikoni_domain/: Cargo.toml
jikoni_domain/features/: animal.feature  operations.feature
jikoni_domain/src/: entity.rs  lib.rs
jikoni_domain/src/port/: mod.rs
jikoni_domain/tests/: cucumber.rs
jikoni_domain/tests/steps/: animal.rs  mod.rs  operations.rs
jikoni_infra/: Cargo.toml
jikoni_infra/src/: configs.rs  lib.rs  main.rs
jikoni_infra/src/recipes/: mod.rs  recipe_model.rs  recipe_service.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220718_000001_create_recipe_table.rs
src/: configs.rs  graphql.rs  lib.rs  main.rs
src/recipes/: recipe_schemas.rs
